--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services:11.4.0'
+    compile 'com.google.firebase:firebase-core:11.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
