--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,12 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.google.firebase:firebase-core:11.8.0'
+    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-firestore:11.8.0'
     testCompile 'junit:junit:4.12'
-    compile 'com.google.android.gms:play-services:11.4.0'
-    compile 'com.google.firebase:firebase-core:11.4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
