--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,9 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        maven{
-            url "https://maven.google.com"
+
+        maven {
+            url "https://maven.google.com" // Google's Maven repository
         }
     }
 }
